tests/fixtures/errors/loopcond_resultval.z
# E0100: a bare `for while <cond> loop` condition must be bool. A resultval
# (from a lossy conversion) is a type error rather than invalid C.
main: function is {
    big: 999.u64
    for while big.u32 loop { print "x" }
}
